Added additional information to the README.md file.